rm Cobertura annotations